syntax = "proto3";

package archivos;

service ArchivosService {
    rpc CargarArchivo(stream SubidaArchivoRequest) returns (ArchivoRespuesta);
    rpc DescargarArchivo(IdTarea) returns (stream DescargaArchivoResponse);
    rpc EliminarArchivo(IdTarea) returns (OperacionRespuesta);
}

message SubidaArchivoRequest {
    string nombre = 1;
    int32 idTarea = 2;
    string tipo = 3;
    bytes chunk = 4;
    bool fin = 5;
}

message ArchivoRespuesta {
  string id = 1;
  string mensaje = 2;
}

message IdTarea {
    int32 idTarea = 1;
}

message DescargaArchivoResponse {
    bytes chunk = 1;
}

message OperacionRespuesta {
    string mensaje = 1;
}